--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   php:
     image: "php:cli-alpine"
@@ -6,7 +5,7 @@ services:
       - .:/var/www/html
     ports:
       - "8081:8081"
-#    restart: "always"
+    restart: "unless-stopped"
     working_dir: "/var/www/html"
     command:
       - "php"
